@@ -1,3 +1,7 @@
+Sun Feb  8 01:24:38 CET 2015
+	Adding MHD_OPTION_HTTPS_KEY_PASSWORD as proposed by
+	Andrew Basile. -CG/AB
+
 Wed Feb  4 20:34:22 CET 2015
 	Fix issue where for HTTP/1.0-clients that set
 	Connection: Keep-Alive header a response of
